Add profile pic for user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div>
+    <%= form.label :picture, style: "display: block" %>
+    <%= form.file_field :picture %>
+  </div>
+
+  <div>
     <%= form.label :username, style: "display: block" %>
     <%= form.text_field :username %>
   </div>
