--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,7 @@
 <div id="<%= dom_id user %>">
+
+  <%= image_tag(@user.picture, size: "200x200") %>
+
   <p>
     <strong>Username:</strong>
     <%= user.username %>
